Release [next]
-updated to build and use the new BUFRDC series of the ECMWF library
 including the latest versions 000400 and  000401.
-add reading, writing and using the C-BUFR tables which allows expanding
 numerical flag values to the corresponding text values.
-fix a bug that happens if multiple bufr files using different templates
 from different bufr table files are used in the same script.
-fase out the singletom trick since it made things too complicated
 (and was only experimnental anyway)

Release 0.73 (08-Dec-2013)
-fix pip install issue and add pip install test to build_test.py 
-fix a whole bunch of new pylint warnings
 (since pylint now also complains about whitespace)

Release 0.72 (14-May-2013):
-add a safety check to bufr_to_ascii.py and add a little sorting script
 named sort_bufr_msgs.py, to prevent trouble in case bufr_to_ascii.py is
 used on a file that contains mixed BUFR messages using different templates

Release 0.71 (14-May-2013):
-fix a mistake in the manifest file

Release 0.7 (May-2013):
-fix a few python3 compatibility issues
-fix issue 4 (warning on max bufr message size had wrong threshold)
-add a simple example program to request a name for a descriptor number
-make bufr table copying code more efficient

Release 0.6 (May-2013):
-move to ECMWF BUFR version bufrdc_000400
-reorganise custom fortran code added to the ECMWF library 
 to allow easier interfacing by this module
-split test data from example_programs dir, and move to separate test dir
-fix a number of python3 compatibility issues

Release 0.5 (25-Sep-2012):

Contains mainly small bug fixes and updates the build script to the 
latest library version.

Release 0.4 (06-Sep-2011):

Several fixes have been added in the handling of the BUFR tables, which
now should also work if you provide custom BUFR table names or a custom
BUFR tables directory (as parameter or through the BUFR_TABLES environment
setting) to the module.