@@ -1,4 +1,7 @@
 Release [next]
+-do no longer download the latest library version from ECMWF, to prevent
+ breakage in case the redesign their website or software package,
+ just use the packed tar file (the option to download can still be used though)
 -updated to build and use the new BUFRDC series of the ECMWF library
  including the latest versions 000400 and  000401.
 -add reading, writing and using the C-BUFR tables which allows expanding
